Resolves: tdf#97968 adjust references during Cut&Paste of formula groups

... and split groups for cases where references point outside or into the moved
range.

Change-Id: Iab799e94eed1677f266413b6304651ac4d330e95
(cherry picked from commit dfa92e106f7eaa8c3fc6cda034001197ecc53a8f)
Reviewed-on: https://gerrit.libreoffice.org/30067
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 560469473f8485da4be1e9cedcb7f5399799a485)